[gd_scene load_steps=6 format=1]

[ext_resource path="res://resources/themes/options.tres" type="Theme" id=1]
[ext_resource path="res://scenes/options/options.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/topo.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 32
extra_spacing/bottom = -8
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="options" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name=" background" type="Panel" parent="."]

visibility/self_opacity = 0.3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="back" type="Button" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 95.0
margin/right = 244.0
margin/bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = true

[node name="scroll" type="ScrollContainer" parent="."]

anchor/left = 3
anchor/right = 3
anchor/bottom = 1
rect/min_size = Vector2( 600, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 16.0
margin/right = -300.0
margin/bottom = 16.0
scroll/horizontal = false
scroll/vertical = true

[node name="vbox" type="VBoxContainer" parent="scroll"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 392.0
custom_constants/separation = 16
alignment = 0

[node name="panel-1" type="Panel" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 48.0

[node name="label" type="Label" parent="scroll/vbox/panel-1"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 16.0
margin/top = 8.0
margin/right = 16.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 2 )
text = "Audio"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="global" type="Container" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 64.0
margin/right = 600.0
margin/bottom = 80.0

[node name="label" type="Label" parent="scroll/vbox/global"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 94.0
margin/bottom = 15.0
text = "Global Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="HSlider" parent="scroll/vbox/global"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 3.0
margin/right = 64.0
margin/bottom = 11.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="text" type="Label" parent="scroll/vbox/global"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 63.0
margin/top = 2.0
margin/right = -1.0
margin/bottom = 16.0
text = "100 %"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="samples" type="Container" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 96.0
margin/right = 600.0
margin/bottom = 112.0

[node name="label" type="Label" parent="scroll/vbox/samples"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 94.0
margin/bottom = 15.0
text = "Samples Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="HSlider" parent="scroll/vbox/samples"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 3.0
margin/right = 64.0
margin/bottom = 11.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="text" type="Label" parent="scroll/vbox/samples"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 63.0
margin/top = 2.0
margin/right = -1.0
margin/bottom = 16.0
text = "100 %"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="music" type="Container" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 128.0
margin/right = 600.0
margin/bottom = 144.0

[node name="label" type="Label" parent="scroll/vbox/music"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 94.0
margin/bottom = 15.0
text = "Music Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="HSlider" parent="scroll/vbox/music"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 3.0
margin/right = 64.0
margin/bottom = 11.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="text" type="Label" parent="scroll/vbox/music"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 63.0
margin/top = 2.0
margin/right = -1.0
margin/bottom = 16.0
text = "100 %"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel-2" type="Panel" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 160.0
margin/right = 600.0
margin/bottom = 208.0

[node name="label" type="Label" parent="scroll/vbox/panel-2"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 16.0
margin/top = 8.0
margin/right = 16.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 2 )
text = "Playfield"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="hide" type="Container" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 224.0
margin/right = 600.0
margin/bottom = 248.0

[node name="background" type="CheckBox" parent="scroll/vbox/hide"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 189.0
margin/bottom = 21.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Hide background image"
flat = false
align = 0

[node name="sirami-logo" type="CheckBox" parent="scroll/vbox/hide"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 21.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Hide Sirami logo"
flat = false
align = 0

[node name="panel-3" type="Panel" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 264.0
margin/right = 600.0
margin/bottom = 312.0

[node name="label" type="Label" parent="scroll/vbox/panel-3"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 16.0
margin/top = 8.0
margin/right = 16.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 2 )
text = "Keys"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="left" type="Container" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 328.0
margin/right = 600.0
margin/bottom = 352.0

[node name="label" type="Label" parent="scroll/vbox/left"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 55.0
margin/bottom = 16.0
text = "Left Key"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button" type="Button" parent="scroll/vbox/left"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 2.0
margin/right = 0.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "W"
flat = false

[node name="right" type="Container" parent="scroll/vbox"]

rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 368.0
margin/right = 600.0
margin/bottom = 392.0

[node name="label" type="Label" parent="scroll/vbox/right"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 9.0
margin/right = 66.0
margin/bottom = 21.0
text = "Right Key"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button" type="Button" parent="scroll/vbox/right"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 18.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]

[connection signal="value_changed" from="scroll/vbox/global/value" to="." method="_on_global_volume_value_changed"]

[connection signal="value_changed" from="scroll/vbox/samples/value" to="." method="_on_samples_volume_value_changed"]

[connection signal="value_changed" from="scroll/vbox/music/value" to="." method="_on_music_volume_value_changed"]

[connection signal="pressed" from="scroll/vbox/hide/background" to="." method="_on_hide_background_pressed"]

[connection signal="pressed" from="scroll/vbox/hide/sirami-logo" to="." method="_on_hide_sirami_logo_pressed"]

[connection signal="pressed" from="scroll/vbox/left/button" to="." method="_on_left_key_pressed"]

[connection signal="pressed" from="scroll/vbox/right/button" to="." method="_on_right_key_pressed"]


